--- a/style.css
+++ b/style.css
@@ -75,11 +75,7 @@ html {
 }
 
 .content-container {
-    transition: all 0.5s ease-in;
-}
-
-.content-container > * {
-    transition: all 0.5s ease-in;
+    transition: width 0.5s ease-in, margin-left 0.5s ease-in
 }
 
 /* Sidebar style */
